FinishedAdminManagementView
